# coding-agent

./: .env.example  .env.local.example  .gitignore  .mcp.json  AUTOCOMPLETE_FIX_README.md  BROWSE_MODE_FEATURE.md  CLAUDE.md  Cargo.toml  GLM4_SETUP.md  HOW_TO_USE.md  LOGGING.md  PROJECT_NOTES.md  QUICKSTART.md  README.md  SETUP.md  coding-agent.sh  mvp.md  run-agent.sh  run.sh  start.sh
.cargo/: config.toml
coding-agent/: Cargo.toml  run.sh
coding-agent/config/: agent.json  logging.toml  prompt.txt
coding-agent/examples/: test_bash_tool_integration.rs  test_bigmodel.rs  test_glm.rs
coding-agent/src/: client_resolver.rs  config.rs  llm_logger.rs  main.rs  prompt.rs
coding-agent/src/behaviors/: mod.rs  output_guard.rs  system_prompt.rs
coding-agent/src/config/: mod.rs  paths.rs
coding-agent/src/context/: mod.rs
coding-agent/src/context/application/: context_builder.rs  file_search.rs  mod.rs
coding-agent/src/context/domain/: injector.rs  mod.rs  parser.rs  reference.rs
coding-agent/src/logging/: config.rs  formatter.rs  mod.rs  tui_bridge.rs
coding-agent/src/permissions/: config.rs  engine.rs  mod.rs
coding-agent/src/platform/: mod.rs
coding-agent/src/platform/domain/: command.rs  filesystem.rs  mod.rs  path.rs
coding-agent/src/platform/platform_impl/: factory.rs  mod.rs
coding-agent/src/platform/platform_impl/unix/: command.rs  filesystem.rs  mod.rs
coding-agent/src/platform/platform_impl/windows/: command.rs  filesystem.rs  mod.rs
coding-agent/src/query/: cancellation.rs  compaction.rs  engine.rs  mod.rs  tirea_engine.rs  token_estimation.rs
coding-agent/src/state/: actions.rs  coding_state.rs  conversation.rs  mod.rs
coding-agent/src/tools/: bash_tool.rs  edit_tool.rs  glob_tool.rs  grep_tool.rs  head_tail_tool.rs  list_tool.rs  mod.rs  read_tool.rs  schema_fix.rs  stat_tool.rs  write_tool.rs
coding-agent/src/tools/application/: apply_patch_tool.rs  bash_tool.rs  batch_tool.rs  codesearch_tool.rs  edit_tool.rs  glob_tool.rs  grep_tool.rs  head_tail_tool.rs  list_tool.rs  mod.rs  read_tool.rs  stat_tool.rs  todo_tool.rs  webfetch_tool.rs  websearch_tool.rs  write_tool.rs
coding-agent/src/tools/domain/: async_bridge.rs  concurrency.rs  doc_generator.rs  error_handler.rs  file_operations.rs  file_type.rs  json_builder.rs  macros.rs  mod.rs  permissions.rs  provider.rs  registry.rs  tool_metadata.rs  validation.rs  xml_builder.rs
coding-agent/src/ui/: completer.rs  helper.rs  mod.rs  prompt.rs  tui_selector.rs
coding-agent/src/ui/tui/: app.rs  autocomplete.rs  conversation.rs  debug_panel.rs  events.rs  input.rs  input_status.rs  layout.rs  markdown.rs  mod.rs  permission_prompt.rs  selection.rs  status_bar.rs
doc/: usage.md
(+1 files in other folders)
