[package]
name = "coding-agent"
version.workspace = true
edition.workspace = true

[dependencies]
tirea = "0.3.0"
tirea-contract = "0.3.0"
tirea-agent-loop = "0.3.0"
tirea-agentos = "0.3.0"
tirea-extension-permission = "0.3.0"
tirea-store-adapters = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
glob = "0.3"
regex = "1"
schemars = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
indoc = "2"
walkdir = "2"
env_logger = "0.10"
futures = "0.3"
genai = "0.6.0-beta.5"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "test_glm"
path = "examples/test_glm.rs"
