[package]
name = "coding-agent"
version.workspace = true
edition.workspace = true

[dependencies]
tirea = "0.3.0"
tirea-contract = "0.3.0"
tirea-agent-loop = "0.3.0"
tirea-agentos = "0.3.0"
tirea-extension-permission = "0.3.0"
tirea-store-adapters = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
glob = "0.3"
regex = "1"
schemars = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
indoc = "2"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
termcolor = "1.4"
toml = "0.8"
futures = "0.3"
genai = { version = "0.6.0-beta.10" }
dotenv = "0.15"
quick-xml = { version = "0.31", features = ["serialize"] }
command-group = "5"
path-clean = "0.1"
pathdiff = "0.2"
paste = "1.0"

# File type detection and multi-format support
mime_guess = "2"
infer = "0.15"
lopdf = "0.31"
base64 = "0.22"

# Interactive readline and autocompletion
rustyline = "13"

# TUI framework
ratatui = "0.26"
crossterm = "0.27"
tui-textarea = "0.4"

# Text handling
textwrap = "0.16"
unicode-width = "0.1"

# Markdown parsing
pulldown-cmark = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "test_glm"
path = "examples/test_glm.rs"
